tests/fail/parsingBoth/a single underscore is not an id.mm0
-- the single character _ is not an identifier
sort _;
